# dagster-multi-tenant-example

./: .env.example  .gitignore  MULTI_TENANT_WEBINAR_DEMO_SPEC.md  README.md  pyproject.toml  setup.py  workspace.yaml
beacon_hq/: resources.py  sensors.py
beacon_hq/assets/: __init__.py
harbor_outfitters/: resources.py
harbor_outfitters/assets/: __init__.py  bronze.py  gold.py
scripts/: setup_code_location_envs.sh
shared/: __init__.py  io_managers.py  resources.py
summit_financial/: resources.py
summit_financial/assets/: __init__.py  bronze.py  silver.py
tests/: __init__.py  test_beacon_hq.py
