[project]
name = "multi-tenant-webinar-demo"
version = "0.1.0"
description = "Dagster multi-tenant demo with context engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster==1.12.19",
    "duckdb>=1.5.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver==1.12.19",
    "dagster-dg-cli==1.12.19",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.dg]
directory_type = "workspace"

[tool.dg.workspace]

[tool.ruff]
target-version = "py311"
line-length = 100
